interpreter/tests/test_files/neg/bad_flow2.s
	mov r1 pc
	restrict r1 O GLOBAL
	restrict r1 E GLOBAL
	halt
